--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ title:  'STAT 311'
             <section class="normal" id="section-">
 <div id="header">
 <div id="Introduction" style="padding:50px" class="section level1 unnumbered">
-<h1>Welcome to the Lab Website for Stat 311</h1>
-<p>This website contains the materials for Stat 311 at the University of Washington. The labs were first adopted from OpenIntro for the Autumn 2019 version of Stat 311, and have been updated in Summer 2020.
+<h1>Welcome to the Website for Stat 311</h1>
+<p>This website contains some slides for Stat 311 at the University of Washington. 
 Comments, suggestions and contributions are welcome: send an email to grover4@uw.edu.</p>
 <div id="Schedule" class="section level1 unnumbered">
 <h1> Lab Materials and Lab Schedule </h1>
@@ -28,48 +28,15 @@ Comments, suggestions and contributions are welcome: send an email to grover4@uw
   <nav role="navigation">
 
 <ul class="summary">
-<li><b>Week 1: Getting Started (09/30 &ndash; 10/02) </b> </a></li>
+<li><b>Unit 3: Exploring Data  </b> </a></li>
 <ul>
-<li data-path="oiLabs/Week1/lab1_autumn2020.html"><a href="oiLabs/Week1/lab1_autumn2020.html"> Lab 1: Getting Started With R and RStudio </a> </li>
-</ul>
-
-<li><b>Week 2: Tutorial Week (10/05 &ndash; 10/09) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week2/lab2.html"><a href="oiLabs/Week2/lab2.html"> Tutorial: Introduction to Tidyverse</a> </li>
-<li data-path="https://rsc.stat.washington.edu/content/16"> <a href="https://rsc.stat.washington.edu/content/16"> Learnr Tutorial: Say Hello to ggplot </a></li>
+<li data-path="slides/u3-d01-viz-num.html"><a href="slides/u3-d01-viz-num.html> Exploring Numerical Data </a> </li>
 </ul>
 
 
-<li><b>Week 3: Exploratory Data Analysis (10/12 &ndash; 10/17) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week3/lab2autumn2020.html"><a href="oiLabs/Week3/lab2autumn2020.html"> Lab2: Summarizing Numerical Data </a> </li>
-<li data-path="https://rsc.stat.washington.edu/content/18"> <a href="https://rsc.stat.washington.edu/content/18"> Learnr Tutorial: Numerical data - numerical summaries </a></li>
-</ul>
-<li><b>Week 4: Review Week (10/19 &ndash; 10/23) </b> </a></li>
-<li><b>Week 5: Linear Regression (10/26 &ndash; 10/30) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week5/lab3autumn2020.html"><a href="oiLabs/Week5/lab3autumn2020.html"> Lab3: Introduction to Linear Regression </a> </li>
-<li data-path="oiLabs/Week5/STAT311_Chapter8_Review_Problems.html"> <a href="oiLabs/Week5/STAT311_Chapter8_Review_Problems.html"> Chapter 8 Practice Problems  </a></li>
-</ul>
-<li><b>Week 6: Foundations of Inference (11/2 &ndash; 11/6) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week6/sampling_distribution.html"><a href="oiLabs/Week6/sampling_distribution.html"> Lab4: Sampling Distributions </a> </li>
-<li data-path="oiLabs/Week6/STAT311_Chapter5_Review_Problems.html"> <a href="oiLabs/Week6/STAT311_Chapter5_Review_Problems.html"> Chapter 5 Practice Problems   </a></li>
-</ul>
-<li><b>Week 7: The Normal Distribution (11/9 &ndash; 11/13) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week7/normal_distribution.html"><a href="oiLabs/Week7/normal_distribution.html"> Lab5: The Normal Distribution </a> </li>
-<li data-path="oiLabs/Week7/STAT311_Chapter4_Review_Problems.html"> <a href="oiLabs/Week7/STAT311_Chapter4_Review_Problems.html"> Chapter 5 Practice Problems   </a></li>
-</ul>
-<li><b>Week 8: Review Week  (11/16 &ndash; 11/20) </b> </a></li>
-<li><b>Week 9: Thanksgiving Week  (11/23 &ndash; 11/27) </b> </a></li>
-<ul>
-<li data-path="https://rsc.stat.washington.edu/content/18"> <a href="https://rsc.stat.washington.edu/content/24"> Learnr Tutorial: Confidence Intervals </a></li>
-</ul>
-<li><b>Week 10: Inference for Categorical Data  (11/30 &ndash; 12/04) </b> </a></li>
-<ul>
-<li data-path="oiLabs/Week10/inference-for-p.html"><a href="oiLabs/Week10/inference-for-p.html"> Lab6: Confidence Intervals and Hypothesis Test for a Single Proportion </a> </li>
-</ul>
+
+
+
 <!---
 <li><b>Week 3 (07/06 &ndash; 07/10) </b> </a></li>
 <ul>
