--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ title:  'STAT 311'
 <body>
 
 
-
   <div class="book without-animation with-summary font-size-2 font-family-1" data-basepath=".">
 
 
@@ -30,12 +29,9 @@ Comments, suggestions and contributions are welcome: send an email to grover4@uw
 <ul class="summary">
 <li><b>Unit 3: Exploring Data  </b> </a></li>
 <ul>
-<li data-path="slides/u3-d01-viz-num.html"><a href="slides/u3-d01-viz-num.html> Exploring Numerical Data </a> </li>
+<li data-path="slides/u3-d01-viz-num.html">
+  <a href="slides/u3-d01-viz-num.html"> Exploring Numerical Data</a> </li>
 </ul>
-
-
-
-		    
 </nav>
 </div>
 </div>
